# object_oriented_c

./: .gitignore  CMakeLists.txt  README.md
components/: CMakeLists.txt
components/oo_base/: CMakeLists.txt
components/oo_base/clonable_interface/: CMakeLists.txt
components/oo_base/clonable_interface/inc/ooc/: clonable_interface.h
components/oo_base/clonable_interface/src/: clonable_interface.c
components/oo_base/clonable_interface/tst/: CMakeLists.txt  test_clonable_interface.cc
components/oo_base/clonable_interface/tst/mock/: o_mock_clonable.c  o_mock_clonable.h  o_mock_clonable.r
components/oo_base/collection_interface/: collection_interface.c  collection_interface.h  list_interface.c  list_interface.h
components/oo_base/comparable_interface/: comparable_interface.c  comparable_interface.h
components/oo_base/iterator/: iterable_interface.c  iterable_interface.h  iterator.c  iterator.h  iterator.r
components/oo_base/map/: map_interface.c  map_interface.h  tree_map.c  tree_map.h  tree_map.r  tree_map_helper_functions.h  tree_map_iterator.c  tree_map_iterator.h  tree_map_iterator.r
components/oo_base/nullable/: nullable.h
components/oo_base/o_string/: o_string.c  o_string.h  o_string.r  o_string_extra.c  o_string_extra.h
components/oo_base/object/: CMakeLists.txt
components/oo_base/oo_config/: CMakeLists.txt
components/oo_base/printable_interface/: printable_interface.c  printable_interface.h
components/oo_base/test_suite/: test_suite.h
components/oo_base/tuple/: sized_object.c  sized_object.h  (+3 more)
fig/pkg_dependency/: ooc_dependency.drawio
(+28 files in other folders)
